--- a/.travis.yml
+++ b/.travis.yml
@@ -57,14 +57,18 @@ deploy:
     
 after_deploy:
   - echo "Deployment succeeded!!!!!!!!!!!!"
-  - VERSION_IN_FILE=$(grep -A2 '"name"' descriptor.json | grep -o "[0-9]*\.[0-9]*")
-  - echo $VERSION_IN_FILE
-  - NEW_VERSION=$(echo "$VERSION_IN_FILE+0.1" | bc | awk '{printf "%.1f", $0}')
+  - VERSION_IN_DISCRIPTOR=$(grep -A2 '"name"' descriptor.json | grep -o "[0-9]*\.[0-9]*")
+  - echo $VERSION_IN_DISCRIPTOR
+  - NEW_VERSION=$(echo "$VERSION_IN_DISCRIPTOR+0.1" | bc | awk '{printf "%.1f", $0}')
   - echo $NEW_VERSION
-  - MATCH='s/\"name\"\:\s*\"'$VERSION_IN_FILE'\"/\"name\"\:\"'$NEW_VERSION'\"/'
+  - MATCH='s/\"name\"\:\s*\"'$VERSION_IN_DISCRIPTOR'\"/\"name\"\:\"'$NEW_VERSION'\"/'
   - sed -i $MATCH descriptor.json
   - cat descriptor.json
-  - echo $TRAVIS_BRANCH
+  - VERSION_IN_MANIFEST=$(cat manifest.yml | grep CRB_VERSION | awk {'print $2'})
+  - echo $VERSION_IN_MANIFEST
+  - MATCH='s/'$VERSION_IN_MANIFEST'/'$NEW_VERSION'/'
+  - sed -i $MATCH manifest.yml
+  - cat manifest.yml
   - git checkout -B $TRAVIS_BRANCH
   - git add descriptor.json
   - git commit -m "[ci skip] Updated descriptor file with new version $NEW_VERSION."
