--- a/.travis.yml
+++ b/.travis.yml
@@ -28,23 +28,6 @@ script:
   - go build
   - ls -la
   - cd $GOPATH/src/crb/
-  #- cd $GOPATH/src/crb/cmd/crb-server
-  #- mvn deploy:deploy-file -Dfile=cmd/crb-server/crb-server -DpomFile=pom.xml -Dtypes=bin -DrepositoryId=bintray-ocopea-pcf-fs-crb --settings settings.xml  
-  #- curl -T crb-server -u akarmia:f85c7ec8c15692e5f996b25f80244a962a5b91d5 https://api.bintray.com/content/ocopea/pcf-fs-crb/pcf-fs-crb/1.1/crb-server-1.1
-  - RES=$(curl https://api.bintray.com/packages/ocopea/pcf-fs-crb/pcf-fs-crb/versions/_latest -u yqian30:4ab324aad6d88d8a5f78416b7f416b7f60d495cf)
-  - echo $RES
-  - if [ "$RES" != '{"message":"Not Found"}' ]; then
-        OLD_VERSION=$(echo $RES | awk -F, {'print $1'} | awk -F '"' {'print $4'} | awk -F '.' {'print $2'} );
-        MINOR_VERSION=$(echo "$OLD_VERSION+1" | bc );
-    fi
-  - echo $OLD_VERSION
-  - echo $MINOR_VERSION
-  - NEW_VERSION=$MAJOR_VERSION.$MINOR_VERSION 
-  - echo $NEW_VERSION
-  - VERSION_IN_FILE=$(grep -A2 '"name"' descriptor.json | grep -o "[0-9]*\.[0-9]*")
-  - MATCH='s/\"name\"\:\s*\"'$VERSION_IN_FILE'\"/\"name\"\:\"'$NEW_VERSION'\"/'
-  - sed -i $MATCH descriptor.json
-  - echo $TRAVIS_BRANCH
   
 deploy:  
   skip_cleanup: true
@@ -56,7 +39,6 @@ deploy:
     all_branches: true
     
 after_deploy:
-  - echo "Deployment succeeded!!!!!!!!!!!!"
   - VERSION_IN_DISCRIPTOR=$(grep -A2 '"name"' descriptor.json | grep -o "[0-9]*\.[0-9]*")
   - echo $VERSION_IN_DISCRIPTOR
   - NEW_VERSION=$(echo "$VERSION_IN_DISCRIPTOR+0.1" | bc | awk '{printf "%.1f", $0}')
@@ -72,6 +54,6 @@ after_deploy:
   - git checkout -B $TRAVIS_BRANCH
   - git add descriptor.json
   - git add manifest.yml
-  - git commit -m "[ci skip] Updated descriptor file with new version $NEW_VERSION."
+  - git commit -m "[ci skip] Updated descriptor and manifest with new version $NEW_VERSION."
   - git push origin $TRAVIS_BRANCH
   
