--- a/.travis.yml
+++ b/.travis.yml
@@ -7,37 +7,37 @@ env:
   global:
   - DESCRIPTOR="descriptor.json"
   - MANIFEST="manifest.yml"
+  - SWAGGER_VERSION="0.9.0"
 
 install:
   - ln -sf `pwd` $GOPATH/src/crb
-  - curl -o swagger -L'#' https://github.com/go-swagger/go-swagger/releases/download/0.8.0/swagger_$(echo `uname`|tr '[:upper:]' '[:lower:]')_amd64
+  - curl -o swagger -L'#' https://github.com/go-swagger/go-swagger/releases/download/$SWAGGER_VERSION/swagger_$(echo `uname`|tr '[:upper:]' '[:lower:]')_amd64
   - chmod +x swagger
+  - ./swagger version
   - cd $GOPATH/src/crb
   - ./swagger generate server -f swagger.yaml -A crb
   - go get github.com/tools/godep
   - godep version
   - godep restore
   - ./swagger generate server -f swagger.yaml -A crb
-  
+
 script:
-  - ls $GOPATH/src/
   - go install ./...
-  - ls -la
   - go test ./...
   - cd cmd/crb-server/
   - go build
-  - ls -la
   - cd $GOPATH/src/crb/
-  
-deploy:  
+
+deploy:
   skip_cleanup: true
   provider: bintray
-  user: yqian30
-  key: $BINTRAY_DEPLOY_KEY
+  user: $BINTRAY_USER
+  key:
+     secure: $BINTRAY_API_KEY
   file: descriptor.json
   on:
     all_branches: true
-    
+
 after_deploy:
   - VERSION_IN_DISCRIPTOR=$(grep -A2 '"name"' descriptor.json | grep -o "[0-9]*\.[0-9]*")
   - echo $VERSION_IN_DISCRIPTOR
@@ -51,7 +51,6 @@ after_deploy:
   - sed -i $MATCH $DESCRIPTOR
   - cat $DESCRIPTOR
   - VERSION_IN_MANIFEST=$(cat $MANIFEST | grep 'CRB_VERSION' | awk {'print $2'})
-  - echo $VERSION_IN_MANIFEST
   - MATCH='s/'$VERSION_IN_MANIFEST'/'$NEW_VERSION'/'
   - sed -i $MATCH $MANIFEST
   - cat $MANIFEST
@@ -60,4 +59,3 @@ after_deploy:
   - git add $MANIFEST
   - git commit -m "[ci skip] Updated descriptor and manifest files with new version $NEW_VERSION."
   - git push origin $TRAVIS_BRANCH
-  
