--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,4 @@
+# Copyright (c) [2017] Dell Inc. or its subsidiaries. All Rights Reserved.
 ---
 applications:
 - name: crb-server
@@ -9,4 +10,4 @@ applications:
   services:
    - crb-mysql
   env:
-   CRB_VERSION: 3.5
+   CRB_VERSION: 1.0
